# starpy

./: Allocated_Score_Test.py  Allocated_score_Script.py  Create_random_ballots.py  LICENSE  README.md  STAR.py  STAR_Script.py  STAR_Test.py  STAR_adam_do_not_merge_Test.py  pyproject.toml  requirements.txt  setup.py  test_STAR_edge_cases.py  test_STAR_single_winner.py
.github/workflows/: ci.yaml
starpy/: Allocated_Score.py
tests/: conftest.py  test_STAR_edge_cases.py  test_STAR_multi_winner_allocated_score.py  test_STAR_single_winner.py
