[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "starpy"
version = "0.0.001"
description = "Python implementation of the STAR Voting system"
readme = "README.md"
keywords = [
  "STAR voting",
  "voting",
]
license-files = { paths = [ "LICENSE" ] }
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.21.4",
  "pandas>=1.3.4",
]
optional-dependencies.tests = [
  "pytest",
]
urls.Changelog = "https://github.com/Equal-Vote/starpy/releases"
urls.Homepage = "https://github.com/Equal-Vote/starpy"
urls.Source = "https://github.com/Equal-Vote/starpy"
